--- a/app/templates/admin/product_form.html
+++ b/app/templates/admin/product_form.html
@@ -35,5 +35,19 @@
             <a href="{{ url_for('admin.manage_products') }}" class="btn btn-outline-secondary">キャンセル</a>
         </div>
     </form>
+
+    {# ===== ここから新規追加：削除ボタン ===== #}
+    {% if product.name %} {# 新規登録時は表示しない #}
+    <hr class="my-4">
+    <div class="d-flex justify-content-end">
+        <a href="{{ url_for('admin.confirm_delete_product', product_name=product.name|urlencode) }}" class="btn btn-danger">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill me-2" viewBox="0 0 16 16">
+                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+            </svg>
+            この製品を削除する
+        </a>
+    </div>
+    {% endif %}
+    {# ===== ここまで新規追加 ===== #}
 </div>
 {% endblock %}
